--- a/src/components/Table/ModalWindowComponent/style.scss
+++ b/src/components/Table/ModalWindowComponent/style.scss
@@ -14,7 +14,7 @@
   background-color: rgba(0, 0, 0, 0.62);
 
   .modalWindow {
-
+    width: 40%;
     font-size: 18px;
 
     border: 1px solid #000000;
